Fix logos distorting and positioning

--- a/content/_sass/partials/_users-gallery.scss
+++ b/content/_sass/partials/_users-gallery.scss
@@ -23,15 +23,8 @@
   justify-content: space-between;
 }
 
-// .left-nav {
-//   height: fit-content;
-//   margin: 58px 0 0;
-//   width: 200px;
-// }
-
 .left-nav {
   height: fit-content;
-  // margin: 58px 0 6px;
   margin: 0 0 6px;
 }
 
@@ -74,9 +67,7 @@
 }
 
 .left-nav-links {
-  // border-left: 1px solid #013243;
   list-style: none;
-  // margin: 2px 0 0;
   padding: 2px 0;
 }
 
@@ -87,17 +78,9 @@
   text-indent: -15px;
 }
 
-// .left-subnav {
-//   padding: 0;
-// }
-
 .indent a {
   font-size: 14px;
 }
-
-// .gallery-content {
-//   width: calc(100% - 200px);
-// }
 
 .adopter-entry,
 .adopter-row-top,
@@ -128,6 +111,7 @@
 .adopter-logo {
   max-height: 150px;
   max-width: 96%;
+  object-fit: contain;
   order: 1;
 }
 
@@ -164,7 +148,6 @@
   }
 
   .gallery-content {
-    // width: calc(100% - 200px);
     width: calc(100% - 210px);
   }
 }
@@ -194,8 +177,6 @@
   }
 
   .adopter-row-top {
-    // margin: 0 56px 0 0;
-    // max-width: 540px;
     margin: 0;
     max-width: initial;
     width: auto;
@@ -220,8 +201,6 @@
   }
 
   .adopter-row-top {
-    // margin: 0 120px 0 0;
-    // max-width: 700px;
     margin: 0 56px 0 0;
     max-width: 560px;
   }
@@ -232,7 +211,6 @@
 
   .adopter-logo {
     height: 100%;
-    // max-width: 400px;
     max-width: 260px;
   }
 }
@@ -244,7 +222,6 @@
 
 @include media-breakpoint-up(xxl) {
   .site-wrapper > .container {
-    // margin: 0 21px;
     margin: 0 auto;
     min-width: 1200px;
   }
@@ -268,6 +245,7 @@
   .adopter-row-top {
     margin: 0 46px 0 1rem;
     max-width: 760px;
+    width: 760px;
   }
 
   .adopter-sub-title {
